--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
   </style>
 </head>
 <body>
-  <audio src="./public/graveyard-whispers-305210.mp3" autoplay loop></audio>
+<audio loop autoplay muted playsinline id="bg-audio">
+  <source src="/graveyard-whispers-305210.mp3" type="audio/mpeg">
+</audio>
+<script>
+  document.body.addEventListener('click', () => {
+    const a = document.getElementById('bg-audio');
+    a.muted = false;
+    a.play();
+  }, { once: true });
+</script>
+
   <div id="instructions">Click to enter<br>↑↓←→ to move
   </div>
   <script type="module" src="/src/main.js"></script>
