--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Stones of Gaza - Interactive Memorial Installation | Digital Art for Palestine</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Experience 'Stones of Gaza,' a powerful digital memorial installation where each pillar represents a life lost. This interactive artwork transforms Gaza Ministry of Health data into a living monument of collective memory and testimony.">
   <link rel="icon" type="image/svg+xml" href="/favicon.svg">
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
